[package]
name = "dlna-proxy"
version = "0.4.0"
authors = ["Nic0w", "Bartosz Fenski <fenio@debian.org>"]
edition = "2021"
description = "A DLNA proxy that enables use of a DLNA server past the local network boundary"
license = "GPL-3.0"
repository = "https://github.com/fenio/dlna-proxy"
homepage = "https://github.com/fenio/dlna-proxy"
readme = "README.md"
keywords = ["dlna", "upnp", "ssdp", "proxy", "media"]
categories = ["network-programming", "multimedia"]
[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
httparse = "1.9.5"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
nix = { version = "0.29.0", features = ["socket"] }
fern = "0.6.2"
toml = "0.8.19"
log = { version = "0.4.22", features = ["std"] }
reqwest = { version = "0.12.8", default-features = false}
serde = { version = "1.0.210", features = ["derive"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
socket2 = { version = "0.5", features = ["all"] }
