[package]
name = "dlna-proxy"
version = "0.6.0"
authors = ["Nic0w", "Bartosz Fenski <fenio@debian.org>"]
edition = "2021"
description = "A DLNA proxy that enables use of a DLNA server past the local network boundary"
license = "GPL-3.0"
repository = "https://github.com/fenio/dlna-proxy"
homepage = "https://github.com/fenio/dlna-proxy"
readme = "README.md"
keywords = ["dlna", "upnp", "ssdp", "proxy", "media"]
categories = ["network-programming", "multimedia"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
httparse = "1.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["socket"] }
fern = "0.7"
toml = "0.9"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal", "io-util"] }
socket2 = { version = "0.6", features = ["all"] }
